<resources>
    <string name="app_name">Books</string>
    <string name="error_data_message">Error Loading data from the Google Books API</string>
    <string name="no_search_data">Please insert valid search terms </string>

    <string name="hint_title">Insert Title</string>
    <string name="hint_author">Insert Author(s)</string>
    <string name="hint_publisher">Insert Publisher</string>
    <string name="hint_isbn">Insert ISBN</string>
    <string name="search">Search</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="book_icon">Book icon</string>
    <string name="title_of_book">Title of Book</string>
    <string name="book_authors">Book Authors</string>
    <string name="publisher">Publisher</string>
    <string name="published_date">Published Date</string>
</resources>
